<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/dark_mode"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ToggleButton
            android:id="@+id/dark_mode"
            android:layout_margin="5dp"
            android:background="@drawable/button_back"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ToggleButton>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/Default_Ringtone"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Spinner
            android:id="@+id/re_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/Default_Reminder_Time"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Spinner
            android:id="@+id/re_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/Default_Reminder_Frequency"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <Spinner
            android:id="@+id/re_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/default_event_max_interval"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:gravity="center"
            android:id="@+id/max_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/default_alarm_delay_time"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:gravity="center"
            android:id="@+id/delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/save_settings" />
    </LinearLayout>


</LinearLayout>