<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/deepest"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Statistics_Activity">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:background="@drawable/white_stroke"

            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="10dp"
                android:textColor="#EC6A08"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="@string/number_of_reminders"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/STATISTICS_number_of_reminders"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/white_stroke"

            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="10dp"
                android:textColor="#EC6A08"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="@string/number_of_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/STATISTICS_number_of_events"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:background="@drawable/white_stroke"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="10dp"
                android:textColor="#EC6A08"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/STATISTICS_completed_events"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:background="@drawable/white_stroke"

            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="10dp"
                android:textColor="#EC6A08"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="Interval Selected Rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/STATISTICS_interval_rate"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:background="@drawable/white_stroke"

            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="10dp"
                android:textColor="#EC6A08"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="Most Common Reminder mp3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/STATISTICS_most_common_mp3"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:background="@drawable/white_stroke"

            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="10dp"
                android:textColor="#EC6A08"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="Most Common Color in Events"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/STATISTICS_most_common_color"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="@string/completed_event_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>